--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,8 +1,6 @@
 DATABASE_URL = 
 URL_API = 
-COOKIE_SESSION = 
-BASE_IMG_URL = 
 URL_LISTADO = 
-BASE_META_URL = 
-CUIT = 
 FRONTEND_ORIGIN =
+SYNC_TOKEN =
+JWT_SECRET =
