--- a/backend/package.json
+++ b/backend/package.json
@@ -3,29 +3,36 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-  "dev": "ts-node src/index.ts",
-  "db:generate": "prisma generate",
-  "db:push": "prisma db push",
-  "db:setup": "npm run db:generate && npm run db:push",
-  "build": "tsc -p tsconfig.json",
-  "start": "node dist/index.js"
-},
+    "dev": "ts-node src/index.ts",
+    "db:generate": "prisma generate",
+    "db:push": "prisma db push",
+    "db:setup": "npm run db:generate && npm run db:push",
+    "build": "tsc -p tsconfig.json",
+    "start": "node dist/index.js"
+  },
   "author": "",
   "license": "ISC",
   "description": "",
   "dependencies": {
     "@prisma/client": "^5.22.0",
+    "bcryptjs": "^3.0.3",
     "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^5.1.0",
+    "google-auth-library": "^10.5.0",
+    "jsonwebtoken": "^9.0.3",
     "mongodb": "^7.0.0",
+    "nodemailer": "^7.0.11",
     "swagger-jsdoc": "^6.2.8",
-    "swagger-ui-express": "^5.0.1"
+    "swagger-ui-express": "^5.0.1",
+    "zod": "^4.1.13"
   },
   "devDependencies": {
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.5",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.10.1",
+    "@types/nodemailer": "^7.0.4",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.8",
     "prisma": "^5.22.0",
