--- a/backend/tsconfig.json
+++ b/backend/tsconfig.json
@@ -8,6 +8,6 @@
     "strict": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/controllers"],
   "exclude": ["node_modules", "dist"]
 }
