--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,10 +1,8 @@
 DATABASE_URL = 
-URL_API = 
-URL_LISTADO = 
-FRONTEND_ORIGIN =
-SYNC_TOKEN =
-JWT_SECRET =
-EMAIL_HOST =
-EMAIL_PORT =
-EMAIL_USER =
-EMAIL_PASS =
+FRONTEND_ORIGIN = 
+SYNC_TOKEN = 
+JWT_SECRET = 
+GOOGLE_CLIENT_ID = 
+VITE_GOOGLE_API_KEY = 
+RESEND_API_KEY=
+CSV_URL=
