--- a/backend/.env.example
+++ b/backend/.env.example
@@ -2,7 +2,8 @@ DATABASE_URL =
 FRONTEND_ORIGIN = 
 SYNC_TOKEN = 
 JWT_SECRET = 
-GOOGLE_CLIENT_ID = 
+GOOGLE_CLIENT_ID = "
 VITE_GOOGLE_API_KEY = 
-RESEND_API_KEY=
-CSV_URL=
+RESEND_API_KEY =
+CSV_URL =
+WHATSAPP_ADMIN_PHONE =
