--- a/backend/.env.example
+++ b/backend/.env.example
@@ -7,3 +7,8 @@ VITE_GOOGLE_API_KEY =
 RESEND_API_KEY =
 CSV_URL =
 WHATSAPP_ADMIN_PHONE =
+BACKEND_URL =
+CLOUDINARY_CLOUD_NAME =
+CLOUDINARY_API_KEY =
+CLOUDINARY_API_SECRET =
+CLOUDINARY_FOLDER =
