--- a/backend/.env.example
+++ b/backend/.env.example
@@ -1,15 +1,16 @@
-DATABASE_URL = 
-FRONTEND_ORIGIN = 
-FRONTEND_ORIGINS = 
-SYNC_TOKEN = 
-JWT_SECRET = 
-GOOGLE_CLIENT_ID = "
-VITE_GOOGLE_API_KEY = 
-RESEND_API_KEY =
-CSV_URL =
-WHATSAPP_ADMIN_PHONE =
-BACKEND_URL =
-CLOUDINARY_CLOUD_NAME =
-CLOUDINARY_API_KEY =
-CLOUDINARY_API_SECRET =
-CLOUDINARY_FOLDER =
+DATABASE_URL=
+FRONTEND_ORIGIN=https://shortcirkuit.com
+FRONTEND_ORIGINS=
+SYNC_TOKEN=
+CRON_SECRET=
+JWT_SECRET=
+GOOGLE_CLIENT_ID=
+RESEND_API_KEY=
+CSV_URL=
+WHATSAPP_ADMIN_PHONE=
+BACKEND_URL=https://shortcirkuit.com
+FRONTEND_URL=https://shortcirkuit.com
+CLOUDINARY_CLOUD_NAME=
+CLOUDINARY_API_KEY=
+CLOUDINARY_API_SECRET=
+CLOUDINARY_FOLDER=products
