--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,8 +1,7 @@
-VITE_API_URL = 
-VITE_GOOGLE_CLIENT_ID = 
-VITE_GOOGLE_API_KEY = 
-VITE_WHATSAPP_SALES_PHONE = 
-VITE_WHATSAPP_SUPPORT_PHONE = 
-VITE_WHATSAPP_SALES_PHONE_LABEL = 
-VITE_WHATSAPP_SUPPORT_PHONE_LABEL = 
-VITE_LINKEDIN_URL = 
+VITE_GOOGLE_CLIENT_ID=
+VITE_GOOGLE_API_KEY=
+VITE_WHATSAPP_SALES_PHONE=
+VITE_WHATSAPP_SUPPORT_PHONE=
+VITE_WHATSAPP_SALES_PHONE_LABEL=
+VITE_WHATSAPP_SUPPORT_PHONE_LABEL=
+VITE_LINKEDIN_URL=
