--- a/short-cirkuit/vercel.json
+++ b/short-cirkuit/vercel.json
@@ -13,7 +13,7 @@
   "crons": [
     {
       "path": "/api/internal/sync-catalog",
-      "schedule": "0 */6 * * *"
+      "schedule": "0 14 * * *"
     }
   ]
 }
