Add Resend Service

--- a/short-cirkuit/backend/.env.example
+++ b/short-cirkuit/backend/.env.example
@@ -1,16 +1,17 @@
 DATABASE_URL=
-FRONTEND_ORIGIN=https://shortcirkuit.com
+FRONTEND_ORIGIN=
 FRONTEND_ORIGINS=
 SYNC_TOKEN=
 CRON_SECRET=
 JWT_SECRET=
 GOOGLE_CLIENT_ID=
 RESEND_API_KEY=
+RESEND_FROM=
 CSV_URL=
 WHATSAPP_ADMIN_PHONE=
-BACKEND_URL=https://shortcirkuit.com
-FRONTEND_URL=https://shortcirkuit.com
+BACKEND_URL=
+FRONTEND_URL=
 CLOUDINARY_CLOUD_NAME=
 CLOUDINARY_API_KEY=
 CLOUDINARY_API_SECRET=
-CLOUDINARY_FOLDER=products
+CLOUDINARY_FOLDER=
